--- a/styles2.css
+++ b/styles2.css
@@ -12,10 +12,9 @@ body {
 
 
 
-.descrip {
+.cool-title {
     font-family: 'Dosis', sans-serif;
     font-size: 24px;
-    position: absolute; left:40px; top:235px;
 }
 
 .main-section {
@@ -26,10 +25,9 @@ body {
 
 
 .biggest-title {
-    color: #6a0202;
+    color: #500000;
     font-size: 64px;
     font-weight: bold; 
-    position: absolute; left:125px; top:140px
 }
 
 p {
@@ -50,7 +48,7 @@ button1 {
     border-radius: 8px 8px 8px 8px;
     font-weight: bold;
     font-size: 20px;
-    position: absolute; left:70px; top:320px; 
+    position: absolute; 
 }
 
 button2 {
@@ -61,7 +59,7 @@ button2 {
     border-radius: 8px 8px 8px 8px;
     font-weight: bold;
     font-size: 20px;
-    position: absolute; left:250px; top:320px; 
+    position: absolute; left:130px; 
 }
 
 button3 {
@@ -94,6 +92,6 @@ footer {
 }
 
 #background1 {
-    position: absolute; left: -50px; top: -20px;
+    position: absolute; left: -50px; top: -50px;
     z-index: -1;
 }
